--- a/package.json
+++ b/package.json
@@ -46,5 +46,17 @@
     "@types/react-dom": "^18.2.18",
     "gh-pages": "^6.1.1",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "webpack-dev-server": "^4.15.1",
+    "http-proxy-middleware": "^2.0.9",
+    "postcss": "^8.4.31",
+    "brace-expansion": "^2.0.1",
+    "@babel/traverse": "^7.23.2",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10",
+    "svgo": "^3.0.2",
+    "resolve-url-loader": "^5.0.0"
   }
 }
